Add Tetris game tile

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
     <main class="games-grid">
         <div class="game-tile">
-            <h2>Game 1</h2>
-            <p>Coming Soon</p>
+            <h2>Tetris</h2>
+            <p>Classic block-stacking puzzle game</p>
             <span class="coming-soon">In Development</span>
         </div>
         <div class="game-tile">
